src/tedi/components/layout/sidenav/sidenav.module.scss
/* ... */
.tedi-sidenav__item [data-name='collapse-trigger'] .tedi-sidenav__link:hover {
  background-color: var(--tedi-alpha-01);
}

.tedi-sidenav__item div[class^='tedi-collapse__content'] {
  margin: 0;
}

.tedi-sidenav__item span[class^='row'] {
  margin-right: 0;
  margin-left: 0;

  & span[class^='col']:first-child {
    padding-right: 0;
    padding-left: 0;
  }
}

.tedi-sidenav__item--with-tree .tedi-sidenav__item.tedi-sidenav__sub-item .tedi-sidenav__link,
.tedi-sidenav__item--level-2 .tedi-sidenav__link {
  min-height: var(--navigation-vertical-item-min-height-medium);
  padding-top: var(--navigation-vertical-item-padding-y);
  padding-bottom: var(--navigation-vertical-item-padding-y);
  /* stylelint-disable-next-line operator-no-newline-after */
  padding-left: calc(
    var(--navigation-vertical-item-padding-right) + var(--sidenav-tree-container) +
      var(--navigation-vertical-item-inner-spacing)
  );
}

.tedi-sidenav__item:not(.tedi-sidenav__item--with-tree) .tedi-sidenav__sub-item.tedi-sidenav__item .tedi-sidenav__link,
.tedi-sidenav__item--level-2 .tedi-sidenav__link,
.tedi-sidenav__item--with-tree.tedi-sidenav__item--level-2 .tedi-sidenav__link.tedi-sidenav__link--has-children-link {
  @include breakpoints.media-breakpoint-down(md) {
    padding-left: var(--navigation-vertical-item-padding-right);
  }
}

.tedi-sidenav__item .tedi-sidenav__link--has-children-link {
  padding-right: calc(var(--navigation-vertical-item-padding-right) + var(--button-xs-icon-size));

  @include breakpoints.media-breakpoint-down(md) {
    z-index: 1;
    margin-left: calc(var(--navigation-vertical-item-padding-right) + var(--button-xs-icon-size));
    background-color: var(--navigation-vertical-item-background-default);
  }
}

.tedi-sidenav__item.tedi-sidenav__sub-item .tedi-sidenav__link--has-children-link {
  @include breakpoints.media-breakpoint-down(md) {
    padding-left: var(--navigation-vertical-item-padding-right);
  }
}

.tedi-sidenav__item
  .tedi-sidenav__link--has-children-link
  + .tedi-sidenav__link-collapse-wrapper
  [data-name='collapse-trigger'] {
  position: absolute;
  top: calc(var(--navigation-vertical-item-min-height-medium) / 3);
  right: var(--navigation-vertical-item-padding-right);
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--button-xs-icon-size);
  height: var(--button-xs-icon-size);
  border-radius: var(--button-radius-sm);

  &:hover,
  &[aria-expanded='true'] {
    background-color: var(--navigation-vertical-item-background-arrow-button-active);
  }
}

.tedi-sidenav__item--mobile {
  border-bottom: var(--borders-01) solid var(--navigation-vertical-item-border);
}

.tedi-sidenav__item.tedi-sidenav__item--current {
  font-weight: var(--body-bold-weight);
  color: var(--navigation-vertical-item-text);
  background-color: var(--navigation-vertical-item-background-active);
}

.tedi-sidenav__item--medium {
  .tedi-sidenav__link {
    min-height: var(--navigation-vertical-item-min-height-medium);
    font-size: var(--navigation-vertical-text-size-sm);
  }

  .tedi-sidenav__sub-item .tedi-sidenav__link {
    min-height: auto;
    padding-top: var(--navigation-vertical-item-padding-y);
    padding-bottom: var(--navigation-vertical-item-padding-y);
    font-size: var(--navigation-vertical-text-size-sm);
  }

  .tedi-sidenav__sub-item .tedi-sidenav__title {
    line-height: var(--body-small-regular-line-height);
  }

  .tedi-sidenav__icon {
    font-size: var(--size-05);
  }

  .tedi-sidenav__item--has-children {
    &::before {
      margin-top: calc(var(--navigation-vertical-item-min-height-small) / 2);

      @include breakpoints.media-breakpoint-down(lg) {
        margin-top: calc(var(--navigation-vertical-item-min-height-small) / 2);
      }
    }
  }
}

.tedi-sidenav__item--small {
  .tedi-sidenav__link {
    min-height: var(--navigation-vertical-item-min-height-small);
    padding-top: var(--navigation-vertical-item-padding-y-sm);
    padding-bottom: var(--navigation-vertical-item-padding-y-sm);
    font-size: var(--navigation-vertical-text-size-sm);
  }

  .tedi-sidenav__sub-item .tedi-sidenav__title {
    line-height: var(--body-small-regular-line-height);
  }

  .tedi-sidenav__sub-item .tedi-sidenav__link {
    min-height: auto;
    padding-top: var(--navigation-vertical-item-padding-y-sm);
    padding-bottom: var(--navigation-vertical-item-padding-y-sm);
    font-size: var(--navigation-vertical-text-size-sm);
  }

  .tedi-sidenav__icon {
    font-size: var(--size-03);
  }

  .tedi-sidenav__item--has-children {
    &::before {
      margin-top: calc(var(--navigation-vertical-item-min-height-small) / 2);

      @include breakpoints.media-breakpoint-down(lg) {
        margin-top: calc(var(--navigation-vertical-item-min-height-small) / 2);
      }
    }
  }
}

button.tedi-sidenav__link {
  width: 100%;
  background: none;
  border: none;
}

button.tedi-sidenav__link.tedi-sidenav__back-button {
  gap: var(--link-inner-spacing-x);
  border-bottom: var(--borders-01) solid var(--navigation-vertical-item-border);
}

.tedi-sidenav__link {
  position: relative;
  display: flex;
  flex-grow: 1;
  gap: var(--navigation-vertical-item-inner-spacing);
  align-items: center;
  min-height: var(--navigation-vertical-item-min-height-large);
  padding: var(--navigation-vertical-item-padding-y) var(--navigation-vertical-item-padding-right)
    var(--navigation-vertical-item-padding-y) var(--navigation-vertical-item-padding-left-level-1);
  font: inherit;
  color: var(--navigation-vertical-item-text);
  text-decoration: none;
  border: 1px solid var(--tedi-alpha-01);
  border-radius: 0;
  transition: 200ms ease;
  transition-property: background-color, color;

  &:hover {
    background-color: var(--navigation-vertical-item-background-hover);
  }

  &:focus-visible {
    border: 1px solid var(--tedi-neutral-100);
    outline: 1px solid var(--navigation-vertical-item-background-focus);
  }
}
/* ... */

